# Uplift_App

./: .env.dev  .firebaserc  .gitignore  AI therapist tests notes.txt  Before-Release.md  CLAUDE.md  DOCUMENTATION_STRUCTURE.md  Dockerfile  FullRefactor.md  GOOGLE_PLAY_SETUP.md  GeminiDuplex.md  GeminiLive.md  GeminiTTS.md  Groq API key.txt  LICENSE  LLAMA API - test key.txt  MajorRefactor.md  Maya.md  MuteMicRace.md  README.md  REWRITE_SUMMARY.md  RaceFix.md  RefactorV.md  SETUP_GUIDE_LINUX.md  TTS_STREAMING_IMPLEMENTATION.md  TTSstreaming.md  USER_DATA_ISOLATION_IMPLEMENTATION_PLAN.md  VoicToggle.md  backendRefactor.md  colorRefactor.md  debugging.md  deploy_openai_fix.ps1  deploy_to_cloud.ps1  deploy_to_cloud.sh  doublebug.md  env.yaml  finalFF.md  finalMixFix.md  firebase.json  fix.md  (+31 more)
ai_therapist_app/: .env  .gitignore  AUDIO_SETTINGS_TEST_SUMMARY.md  AUTO_MODE_PERSISTENCE_FIX.md  CLAUDE.md  DARK_MODE_FIX_VERIFICATION.md  DEBUG_LOGGING_SUMMARY.md  ENV_SETUP.md  GEMINI.md  JulyIssues.md  PHASE_6_MIGRATION_STATUS.md  README.md  RELEASE_BUILD_GUIDE.md  RIFF_HEADER_FIX_SUMMARY.md  SESSION_SUMMARY_PARSING_FIX.md  TTS_BUFFERING_IMPLEMENTATION.md  TTS_CLEANUP_COMPLETE_REPORT.md  WAKELOCK_IMPLEMENTATION.md  analysis_output.txt  build_cloud_release.ps1  build_debug.ps1  build_local_device.ps1  build_release.ps1  build_with_firebase_fix.ps1  debug_logs.txt  env.txt  filter_logs.sh  fix_streaminig.md  gemini.md  generate_icons.ps1  google-services.json  (+21 more)
ai_therapist_app/lib/plugins/rnnoise_flutter/android/src/main/cpp/: CMakeLists.txt  config.h  rnnoise_flutter_jni.cpp
(+668 files in other folders)
